--- a/object-class.html
+++ b/object-class.html
@@ -8,7 +8,7 @@
 		var bgc = document.bgColor;
 		var lc = document.linkColor;
 		var vlc = document.vlinkColor;
-		var bref = document.referrer;
+		var ref = document.referrer;
 		var lm = document.lastModified;
 		var fgc = document.fgColor;
 		var al = document.alinkColor;
